fixed button spacing

--- a/_css/VideoShuffle.css
+++ b/_css/VideoShuffle.css
@@ -3,36 +3,29 @@
 }
 #VideoShuffleControls {
     background-color: rgba(54,54,54,.85);
-    padding: 0px;
-    
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 10%;
+    font-size: 0;
 }
 .VideoShuffleControlsButton {
     height: 100%;
-    width: auto;
+    width: 5.625%;
     display: inline-block;
     cursor: pointer;
+    
+    outline: 1px solid #111;
+    border-top: 1px solid #555;
+    background: rgba(0, 0, 0, 0.5);
 }
 .VideoShuffleControlsButton > svg {
     fill: rgba(200, 200, 200, 0.5);
-    height: 100%;
+    padding: 20%;
+    height: 60%;
     width: auto;
 }
-.ControlsDivider {
-    width: 2px;
-    cursor: auto;
-    padding: 0px 0px;
-    margin: 0px 0px;
-    opacity: 0.6;
-    height: 100%;
-    display: inline-block;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
 #VideoShufflePlayButton > svg {
     display: none;
 }
@@ -42,18 +35,22 @@
 }
 #VideoShuffleFullscreenButton {
     position: absolute;
-    right: 0px;
-    top: 0px;
+    right: 0;
+    top: 0;
 }
 
 #VideoShuffleThumbnails {
-    padding: 0% 0;
-    margin: 0;
-    display: inline;
+    display: inline-block;
     height: 100%;
-    width: 100%;
+    width: 83.125%;
     top: 0px;
-    overflow: scroll;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    white-space: nowrap;
+    
+    outline: 1px solid #111;
+    border-top: 1px solid #555;
+    background: rgba(0, 0, 0, 0.5);
 }
 #VideoShuffleThumbnails span{
     margin: 0 0.25%;
